# compile_yeast_cc_data

./: README.md  pyproject.toml
compileyeastdatabase/Database/: DatabaseApi.py
compileyeastdatabase/Database/yeast/: HopsDb.py
compileyeastdatabase/Resources/: PackageResources.py
compileyeastdatabase/Resources/yeast/: background_adh1.csv  background_dsir4.csv  refactored_names_genome.fasta.fai  regions_not_orf.csv  yiming_regions.csv
compileyeastdatabase/Resources/yeast/old/: S288C_dSir4_Background.qbed  minus_adh1_2015.qbed  orf_coding_all_R61-1-1_20080606.promoter_-700bpto0bp_with_ucsc_seqnames_common_names_coord_corrected_systematic.bed7
tests/: test_construct_database.py
