[tool.poetry]
name = "compileyeastdatabase"
version = "0.1.0"
description = "compile the yeast database for raw calling cards processing"
authors = ["chase mateusiak <chase.mateusiak@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.5.3"
numpy = "^1.24.2"
SQLAlchemy = "^2.0.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
